<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <View
        android:id="@+id/blankView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty"
        app:layout_constraintBottom_toTopOf="@+id/storyRlMain" />

    <LinearLayout
        android:id="@+id/storyRlMain"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/blankView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/ten"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:src="@drawable/back_icon_20_26_12_2020" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/fifty"
            android:layout_marginRight="@dimen/fifty"
            android:layout_weight="0.5"
            android:gravity="left|bottom"
            android:text="SIGN IN "
            android:textSize="@dimen/fifteen"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/sender_imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/fifty"
            android:layout_marginRight="@dimen/fifty"
            android:layout_weight="0.6"
            android:gravity="left|top"
            android:text="TO CONTINUE"
            android:textColor="@color/black"
            android:textSize="@dimen/twenty"
            android:textStyle="bold" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fifty"
            android:layout_marginRight="@dimen/fifty">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fifty"
            android:layout_marginRight="@dimen/fifty"
            android:layout_marginTop="@dimen/seven"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_marginLeft="@dimen/fifty"
            android:layout_marginRight="@dimen/fifty"
            android:layout_weight="1"
            android:background="@drawable/button2"
            android:text="Sign In"
            android:textColor="@color/white" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3" />

        <TextView
            android:id="@+id/tvForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="1"
            android:gravity="center"
            android:text="FORGOT YOUR PASSWORD?" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5" />


        <CheckBox
            android:id="@+id/checkbox_Remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/more_option_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/remember_me_layout"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/remember_me"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/checkbox_Remember_me"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.108"
            app:layout_constraintStart_toStartOf="@+id/checkbox_Remember_me"
            app:layout_constraintTop_toTopOf="@+id/checkbox_Remember_me"
            app:layout_constraintVertical_bias="0.461" />


        <TextView
            android:id="@+id/text_view_more_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:drawableTop="@drawable/ic_expand_24dp"
            android:padding="@dimen/padding_8dp"
            android:text="@string/more_option"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
